--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
  spring.datasource.name=library-db
  ############## DataSource Config #################
  spring.datasource.username=sa
- spring.datasource.password=
+ spring.datasource.password=sa
  spring.datasource.url = jdbc:h2:file:./src/main/resources/database/library-db
  spring.datasource.driver-class-name=org.h2.Driver
  spring.sql.init.encoding= UTF-8
