--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@
  ############## DataSource Config #################
  spring.datasource.username=sa
  spring.datasource.password=sa
- spring.datasource.url = jdbc:h2:file:./src/main/resources/database/library-db
+ spring.datasource.url = jdbc:h2:file:./src/main/resources/database/library-db;AUTO_SERVER=TRUE
  spring.datasource.driver-class-name=org.h2.Driver
  spring.sql.init.encoding= UTF-8
+ spring.sql.init.mode=always
+ spring.jpa.defer-datasource-initialization=true
  spring.sql.init.data-locations=classpath:data/categories.sql
 
  ############# Hibernate properties #################
@@ -28,3 +30,5 @@
  spring.mail.properties.mail.smtp.starttls.enable=true
  spring.mail.test-connection=false
  #https://www.google.com/settings/security/lesssecureapps
+
+ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
