--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.6.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.gkemayo</groupId>
+    <groupId>com.bsaoudi</groupId>
     <artifactId>library</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
